2007-02-09  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/external/DocumentTemplate/*: partially merge in bits from Zope 2.10.1
	to replace all uses of the obsolete 'regex' module by 're'.
	* qm/web.py: Adjust module search path to make 'import DocumentTemplate' work.

2007-01-25  Stefan Seefeld  <stefan@codesourcery.com>

	* qmdist/command/__init__.py: Explicitely close the modified file.
	* qmdist/command/install_lib.py: Force recompilation.

2006-12-12  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/dejagnu_stream.py
	(DejaGNUReader.__UpdateResult): Treat DejaGNU UNTESTED results as
	QMTEST UNTESTED results when generating outcomes from a DejaGNU log
	file.

2006-11-29  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/target.py: Only delete the 'qmtest.id' context variable if it
	really exists.

2006-11-23  Stefan Seefeld  <stefan@codesourcery.com>

	* qmdist/command/install_lib.py: Force recompilation of generated 
	config.py file.

2006-11-08  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/host.py: Adjust constructor to expect keyword arguments.

2006-11-03  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/config.py: Provide initial values for config parameters.
	* qm/__init__.py: Use it.
	* qm/__version.py: Removed (since now obsolete).
	* qmdist/command/__init__.py: Add reset_config_variables.
	* scripts/qmtest-postinstall.py: Use it.
	* qmdist/command/install_lib.py: Use it.
	* qmdist/command/install_data.py: Removed (since now obsolete).
	* qmdist/command/build_py.py: New command; adjusts qm.prefix so it
	is usable in the build tree.
	* qmdist/command/build_doc.py: Modularize.
	* qmdist/command/check.py: Set PYTHONPATH so the right code gets tested.
	* qmdist/command/__init__.py: Adjust to always use qm.config.
	* setup.py: Adjust.
	* qm/test/result_reader.py: Fix fallout from last patch.
	* tests/xmldb/api.qms/test.qms/fields.qmt: Likewise.
	
2006-11-02  Stefan Seefeld  <stefan@codesourcery.com>
